program/.team_api_pytest.log
============================= test session starts ==============================
platform linux -- Python 3.14.6, pytest-9.1.1, pluggy-1.6.0
rootdir: /workspace
configfile: pyproject.toml
plugins: cov-7.1.0, anyio-4.14.2
collected 16 items / 1 error

==================================== ERRORS ====================================
__________ ERROR collecting backend/tests/test_team_workspace_api.py ___________
.venv/lib/python3.14/site-packages/_pytest/python.py:508: in importtestmodule
    mod = import_path(
.venv/lib/python3.14/site-packages/_pytest/pathlib.py:596: in import_path
    importlib.import_module(module_name)
/home/agent/.local/share/uv/python/cpython-3.14.6-linux-aarch64-gnu/lib/python3.14/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1406: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
.venv/lib/python3.14/site-packages/_pytest/assertion/rewrite.py:179: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv/lib/python3.14/site-packages/_pytest/assertion/rewrite.py:348: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/agent/.local/share/uv/python/cpython-3.14.6-linux-aarch64-gnu/lib/python3.14/ast.py:46: in parse
    return compile(source, filename, mode, flags,
E     File "/workspace/backend/tests/test_team_workspace_api.py", line 375
E       "headers": headers(key="k", version='"1"),
E                                           ^
E   SyntaxError: unterminated string literal (detected at line 375)
=========================== short test summary info ============================
ERROR backend/tests/test_team_workspace_api.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.40s ===============================
